Implementation of XGenerationalMultiBufferAllocator